Update Catalan translation

--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-text-editor main\n"
 "POT-Creation-Date: 2022-02-22 20:08+0000\n"
-"PO-Revision-Date: 2022-03-17 20:08+0000\n"
+"PO-Revision-Date: 2022-12-21 20:08+0000\n"
 "Last-Translator: Jordi Mas i Hernàndez <jmas@softcatala.org>\n"
 "Language-Team: Catalan <gnome@llistes.softcatala.org>\n"
 "Language: ca\n"
@@ -180,6 +180,7 @@ msgstr ""
 "vol dir que el document es desa automàticament a la carpeta "
 "d'esborranys de l'editor de text del GNOME."
 
+
 #. (itstool) path: info/desc
 #: C/basics-draft-folder.page:18
 msgid "Explanation of the drafts folder."
@@ -193,7 +194,7 @@ msgstr "esborrany, carpeta"
 #. (itstool) path: page/title
 #: C/basics-draft-folder.page:23
 msgid "Draft folder"
-msgstr "Carpeta d'esborrany"
+msgstr "Carpeta d'esborranys"
 
 #. (itstool) path: page/p
 #: C/basics-draft-folder.page:25
@@ -219,7 +220,7 @@ msgid ""
 msgstr ""
 "Podeu identificar un esborrany en el títol de l'editor de text del GNOME. Hi"
 " ha un subtítol «esborrany» si el document actual no es desa i es trobarà a la "
-"carpeta esborrany."
+"carpeta d'esborranys."
 
 #. (itstool) path: info/desc
 #: C/edit-search-and-replace.page:33
@@ -258,7 +259,7 @@ msgid ""
 "Menu</gui><gui>Find/Replace...</gui></guiseq> or activate it via "
 "<keyseq><key>Ctrl</key><key>F</key></keyseq>."
 msgstr ""
-"Activa el tauler de cerca a través de <guiseq><gui>"
+"Activeu el tauler de cerca a través de <guiseq><gui>"
 "Menú</gui><gui>Cerca/Reemplaça...</gui></guiseq> o activeu-lo mitjançant "
 "<keyseq><key>Ctrl</key><key>F</key></keyseq>."
 
@@ -334,7 +335,7 @@ msgstr "Usa expressions regulars com a terme de cerca"
 #: C/edit-search-and-replace.page:59
 msgid "Respecting case sensitivity of the search term"
 msgstr ""
-"Respectant la sensibilitat de majúscules i minúscules del terme de cerca"
+"Respecta la sensibilitat de majúscules i minúscules del terme de cerca"
 
 #. (itstool) path: list/title
 #: C/edit-search-and-replace.page:65
@@ -364,12 +365,12 @@ msgstr ""
 
 #. (itstool) path: item/p
 msgid "Add your search term which should be replaced into the entry field."
-msgstr "Afegeix el terme de cerca que s'ha de reemplaçar al camp d'entrada."
+msgstr "Afegiu el terme de cerca que s'ha de reemplaçar al camp d'entrada."
 
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:69
 msgid "Add your replace term into the second entry field."
-msgstr "Afegeix el terme de substitució al segon camp d'entrada."
+msgstr "Afegiu el terme de substitució al segon camp d'entrada."
 
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:71
