Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gnome-text-editor master\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gnome-text-editor/issues\n"
 "POT-Creation-Date: 2022-08-23 16:04+0000\n"
-"PO-Revision-Date: 2022-08-29 18:08+0100\n"
+"PO-Revision-Date: 2022-12-31 15:15+0100\n"
 "Last-Translator: Jordi Mas i Hernàndez <jmas@softcatala.org>\n"
 "Language-Team: Catalan <gnome@llistes.softcatala.org>\n"
 "Language: ca\n"
@@ -39,7 +39,7 @@ msgid ""
 "GNOME Text Editor is a simple text editor focused on a pleasing default "
 "experience."
 msgstr ""
-"L'editor de text del GNOME és un editor de text simple centrat en una "
+"L'Editor de text del GNOME és un editor de text simple centrat en una "
 "experiència per defecte agradable."
 
 #: data/org.gnome.TextEditor.desktop.in.in:4
@@ -212,7 +212,7 @@ msgid ""
 "If enabled then Text Editor will try to discover file settings from "
 "modelines, editorconfig, or per-language defaults."
 msgstr ""
-"Si s'habilita, l'editor de text intentarà descobrir els fitxers de "
+"Si s'habilita, l'Editor de text intentarà descobrir els fitxers de "
 "paràmetres a partir dels modes de línia, editorconfig o els predeterminats "
 "de cada idioma."
 
@@ -223,7 +223,7 @@ msgstr "Comprovar automàticament l'ortografia"
 #: data/org.gnome.TextEditor.gschema.xml:114
 msgid "If enabled, then Text Editor will check spelling as you type."
 msgstr ""
-"Si està habilitat, l'editor de text comprovarà l'ortografia mentre escriviu."
+"Si està habilitat, l'Editor de text comprovarà l'ortografia mentre escriviu."
 
 #: data/org.gnome.TextEditor.gschema.xml:118
 msgid "Restore session"
@@ -231,7 +231,7 @@ msgstr "Restaura la sessió"
 
 #: data/org.gnome.TextEditor.gschema.xml:119
 msgid "When Text Editor is run, restore the previous session."
-msgstr "Quan s'executa l'editor de text, restaura la sessió anterior."
+msgstr "Quan s'executa l'Editor de text, restaura la sessió anterior."
 
 #: data/org.gnome.TextEditor.gschema.xml:123
 msgid "Recolor Window"
@@ -249,7 +249,7 @@ msgstr "Dreceres de teclat"
 
 #: data/org.gnome.TextEditor.gschema.xml:133
 msgid "The keybindings to use within Text Editor."
-msgstr "Les dreceres de teclat que s'utilitzaran a l'editor de text."
+msgstr "Les dreceres de teclat que s'utilitzaran a l'Editor de text."
 
 #: data/org.gnome.TextEditor.gschema.xml:137
 msgid "Last Save Directory"
@@ -951,7 +951,7 @@ msgstr "_Ajuda"
 
 #: src/editor-window.ui:263
 msgid "A_bout Text Editor"
-msgstr "Q_uant a l'editor de text"
+msgstr "Q_uant a l'Editor de text"
 
 #: src/editor-window.ui:270
 msgid "Show"
