Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -641,7 +641,7 @@ msgstr "Paraules"
 
 #: src/editor-properties-dialog.ui:96
 msgid "Characters, No Spaces"
-msgstr "Personatges, sense espais"
+msgstr "Caràcters, sense espais"
 
 #: src/editor-properties-dialog.ui:111
 msgid "All Characters"
