--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+# Text Editor 43.2
+
+ • Sort recent documents by last-visited (opened) time
+ • Fix initial state for search bar buttons
+ • Don't allow autosave to race against loading documents
+ • Disable search entry when recents list is empty
+ • Disable highlighting, spellcheck, and brace matching on large files
+ • Fix scrolling of large lists in "save changes" dialog
+ • Fix emphasis style in various style schemes
+ • Translation updates
+
 # Text Editor 43.1
 
 This is a bug-fix release intended for end-users.
