Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -664,7 +664,7 @@ msgid ""
 "Open documents contain unsaved changes. Changes which are not saved will be "
 "permanently lost."
 msgstr ""
-"Els documents oberts contenen canvis sense desar. Els canvis que no es desen"
+"Els documents oberts contenen canvis sense desar. Els canvis que no es desin"
 " es perdran permanentment."
 
 #: src/editor-save-changes-dialog.c:261 src/editor-window-actions.c:116
