--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+# Text Editor 44.beta
+
+Changes since 44.alpha
+
+ • Translation updates
+ • Help documentation updates
+ • Improvements to scroll-to-zoom
+ • Style scheme updates
+ • Additional shortcuts added to help overlay
+
 # Text Editor 44.alpha
 
 This is the first release towards GNOME 44. It is intended for unstable
