--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 44.rc
+
+ • Style fixes for open popover
+ • Fix a small GtkTextTag name leak
+ • Ensure a useful size of preferences dialog
+ • Translation updates
+
 # Text Editor 44.beta
 
 Changes since 44.alpha
