--- a/po/ca.po
+++ b/po/ca.po
@@ -6,9 +6,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-text-editor master\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gnome-text-editor/issues\n"
-"POT-Creation-Date: 2023-01-28 13:03+0000\n"
-"PO-Revision-Date: 2023-01-29 15:15+0100\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gnome-text-editor/"
+"issues\n"
+"POT-Creation-Date: 2023-02-01 03:51+0000\n"
+"PO-Revision-Date: 2023-03-11 15:15+0100\n"
 "Last-Translator: Jordi Mas i Hernàndez <jmas@softcatala.org>\n"
 "Language-Team: Catalan <gnome@llistes.softcatala.org>\n"
 "Language: ca\n"
@@ -76,8 +77,7 @@ msgid "Indentation Style"
 msgstr "Estil de sagnat"
 
 #: data/org.gnome.TextEditor.gschema.xml:36
-msgid ""
-"If the editor should insert multiple spaces characters instead of tabs."
+msgid "If the editor should insert multiple spaces characters instead of tabs."
 msgstr ""
 "Si l'editor ha d'inserir múltiples caràcters d'espai en lloc de tabuladors."
 
@@ -86,11 +86,9 @@ msgid "Auto Indent"
 msgstr "Sagnat automàtic"
 
 #: data/org.gnome.TextEditor.gschema.xml:41
-msgid ""
-"Automatically indent new lines copying the previous line's indentation."
+msgid "Automatically indent new lines copying the previous line's indentation."
 msgstr ""
-"Sagna automàticament les línies noves copiant el sagnat de la línia "
-"anterior."
+"Sagna automàticament les línies noves copiant el sagnat de la línia anterior."
 
 #: data/org.gnome.TextEditor.gschema.xml:46
 msgid "Tab Width"
@@ -141,8 +139,8 @@ msgstr "Mostra el mapa general"
 
 #: data/org.gnome.TextEditor.gschema.xml:74
 msgid ""
-"If enabled, an overview map of the file will be displayed to the side of the"
-" editor."
+"If enabled, an overview map of the file will be displayed to the side of the "
+"editor."
 msgstr ""
 "Si s'habilita, es mostrarà un mapa general del fitxer al costat de l'editor."
 
@@ -151,8 +149,7 @@ msgid "Show Background Grid"
 msgstr "Mostra la quadrícula del fons"
 
 #: data/org.gnome.TextEditor.gschema.xml:79
-msgid ""
-"If enabled, a blueprint style grid is printed on the editor background."
+msgid "If enabled, a blueprint style grid is printed on the editor background."
 msgstr ""
 "Si està habilitada, s'imprimirà una graella d'estil impressió blava en el "
 "fons de l'editor."
@@ -182,8 +179,7 @@ msgid "If the default system monospace font should be used."
 msgstr ""
 "Si s'ha d'utilitzar el tipus de lletra monoespai per defecte del sistema."
 
-#: data/org.gnome.TextEditor.gschema.xml:98
-#: src/editor-preferences-dialog.ui:57
+#: data/org.gnome.TextEditor.gschema.xml:98 src/editor-preferences-dialog.ui:57
 msgid "Custom Font"
 msgstr "Tipus de lletra personalitzada"
 
@@ -430,6 +426,14 @@ msgstr "Tipus de document"
 msgid "No Matches"
 msgstr "Sense coincidències"
 
+#: src/editor-open-popover.ui:25
+msgid "Search documents"
+msgstr "Cerca als documents"
+
+#: src/editor-open-popover.ui:39
+msgid "Open New Document (Ctrl+O)"
+msgstr "Obre un document nou (Ctrl+O)"
+
 #: src/editor-open-popover.ui:74
 msgid "No Recent Documents"
 msgstr "No hi ha documents recents"
@@ -576,8 +580,8 @@ msgstr "Descobreix la configuració del document"
 #: src/editor-preferences-dialog.ui:114
 msgid "Apply settings using modelines, editorconfig, or sensible defaults"
 msgstr ""
-"Apliqueu la configuració mitjançant línies de mode, configuració de l'editor"
-" o valors predeterminats sensats"
+"Apliqueu la configuració mitjançant línies de mode, configuració de l'editor "
+"o valors predeterminats sensats"
 
 #: src/editor-preferences-dialog.ui:120
 msgid "Restore Session"
@@ -607,6 +611,7 @@ msgstr "Fitxer: %s"
 
 #. Translators: %N is the current page number, %Q is the total
 #. * number of pages (ex. Page 2 of 10)
+#.
 #: src/editor-print-operation.c:189
 msgid "Page %N of %Q"
 msgstr "Pàgina %N de %Q"
@@ -664,8 +669,8 @@ msgid ""
 "Open documents contain unsaved changes. Changes which are not saved will be "
 "permanently lost."
 msgstr ""
-"Els documents oberts contenen canvis sense desar. Els canvis que no es desin"
-" es perdran permanentment."
+"Els documents oberts contenen canvis sense desar. Els canvis que no es desin "
+"es perdran permanentment."
 
 #: src/editor-save-changes-dialog.c:263 src/editor-window-actions.c:116
 #: src/editor-window-actions.c:241
@@ -735,8 +740,7 @@ msgstr "_Distingeix entre majúscules i minúscules"
 msgid "Match whole _word only"
 msgstr "_Coincideix només amb la paraula sencera"
 
-#. translators: the first %u is replaced with the current position, the second
-#. with the number of search results
+#. translators: the first %u is replaced with the current position, the second with the number of search results
 #: src/editor-search-entry.c:197
 #, c-format
 msgid "%u of %u"
@@ -890,8 +894,7 @@ msgstr "Redueix"
 msgid "Zoom out"
 msgstr "Allunya"
 
-#. translators: the first %s is replaced with the title, the second %s is
-#. replaced with the subtitle
+#. translators: the first %s is replaced with the title, the second %s is replaced with the subtitle
 #: src/editor-window.c:745
 #, c-format
 msgid "%s (%s) - Text Editor"
