Update Polish translation

--- a/help/pl/pl.po
+++ b/help/pl/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-text-editor-help\n"
-"POT-Creation-Date: 2022-05-08 08:52+0000\n"
+"POT-Creation-Date: 2023-02-04 01:32+0000\n"
 "PO-Revision-Date: 2022-05-08 12:58+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
@@ -91,12 +91,13 @@ msgstr "Otwieranie pliku"
 #: C/basics-open-file.page:13
 msgid ""
 "To open a file in GNOME Text Editor use <gui style=\"button\">Open</gui> in "
-"the Headerbar and <gui>Browse Files...</gui> or the shortcut "
+"the Headerbar and <gui>Open New Document</gui> or the shortcut "
 "<keyseq><key>Ctrl</key><key>O</key></keyseq>."
 msgstr ""
-"Aby otworzyć plik w Edytorze tekstu GNOME, kliknij przycisk <gui style="
-"\"button\">Otwórz</gui> na pasku nagłówka, a następnie <gui>Przeglądaj pliki…"
-"</gui>, lub naciśnij klawisze <keyseq><key>Ctrl</key><key>O</key></keyseq>."
+"Aby otworzyć plik w Edytorze tekstu GNOME, kliknij przycisk <gui "
+"style=\"button\">Otwórz</gui> na pasku nagłówka, a następnie <gui>Otwórz "
+"nowy dokument</gui>, lub naciśnij klawisze <keyseq><key>Ctrl</key><key>O</"
+"key></keyseq>."
 
 #. (itstool) path: page/p
 #: C/basics-open-file.page:17
@@ -138,9 +139,9 @@ msgstr ""
 #: C/basics-open-file.page:27
 msgctxt "_"
 msgid ""
-"external ref='media/search-recent.png' md5='f57950a08e6c7159429d030eb349814f'"
+"external ref='media/search-recent.png' md5='8ddac07e5fb592e68c6208171a52d52f'"
 msgstr ""
-"external ref='media/search-recent.png' md5='f57950a08e6c7159429d030eb349814f'"
+"external ref='media/search-recent.png' md5='8ddac07e5fb592e68c6208171a52d52f'"
 
 #. (itstool) path: info/keywords
 #: C/basics-create-new-file.page:19
@@ -252,13 +253,13 @@ msgstr "Wyszukiwanie tekstu"
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:45
 msgid ""
-"Activate the search panel via <guiseq><gui>Hamburger Menu</gui><gui>Find/"
+"Activate the search panel via <guiseq><gui>Main Menu</gui><gui>Find/"
 "Replace...</gui></guiseq> or activate it via <keyseq><key>Ctrl</key><key>F</"
 "key></keyseq>."
 msgstr ""
-"Aktywuj panel wyszukiwania w <guiseq><gui>Menu</gui><gui>Znajdź/zastąp…</"
-"gui></guiseq> lub za pomocą klawiszy <keyseq><key>Ctrl</key><key>F</key></"
-"keyseq>."
+"Aktywuj panel wyszukiwania w <guiseq><gui>Menu główne</gui><gui>Znajdź/"
+"zastąp…</gui></guiseq> lub za pomocą klawiszy <keyseq><key>Ctrl</key><key>F</"
+"key></keyseq>."
 
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:46
@@ -341,21 +342,21 @@ msgstr "Zastępowanie tekstu"
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:66
 msgid ""
-"Activate the search panel via <guiseq><gui>Hamburger Menu</gui><gui>Find/"
+"Activate the search panel via <guiseq><gui>Main Menu</gui><gui>Find/"
 "Replace...</gui></guiseq> or activate it via <keyseq><key>Ctrl</key><key>H</"
 "key></keyseq>."
 msgstr ""
-"Aktywuj panel wyszukiwania w <guiseq><gui>Menu</gui><gui>Znajdź/zastąp…</"
-"gui></guiseq> lub za pomocą klawiszy <keyseq><key>Ctrl</key><key>H</key></"
-"keyseq>."
+"Aktywuj panel wyszukiwania w <guiseq><gui>Menu główne</gui><gui>Znajdź/"
+"zastąp…</gui></guiseq> lub za pomocą klawiszy <keyseq><key>Ctrl</key><key>H</"
+"key></keyseq>."
 
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:67
 msgid ""
-"In case you opened the search panel via the <gui>Hamburger Menu</gui> you "
-"have to click the button for activating the replace functionality."
+"In case you opened the search panel via the <gui>Main Menu</gui> you have to "
+"click the button for activating the replace functionality."
 msgstr ""
-"Jeśli otwarto panel wyszukiwania za pomocą <gui>Menu</gui>, to należy "
+"Jeśli otwarto panel wyszukiwania za pomocą <gui>Menu główne</gui>, to należy "
 "kliknąć przycisk aktywujący funkcję zastępowania."
 
 #. (itstool) path: item/p
@@ -467,11 +468,11 @@ msgstr "Odrzucanie wszystkich zmian od ostatniego zapisu"
 #. (itstool) path: section/p
 #: C/edit-undo-redo.page:75
 msgid ""
-"<guiseq> <gui>Menu</gui> <gui>Discard Changes</gui> </guiseq> will "
+"<guiseq> <gui>Main Menu</gui> <gui>Discard Changes</gui> </guiseq> will "
 "permanently discard all changes made to a file since it was last saved."
 msgstr ""
-"<guiseq><gui>Menu</gui><gui>Odrzuć zmiany</gui></guiseq> trwale odrzuci "
-"wszystkie zmiany wprowadzone w pliku od ostatniego zapisu."
+"<guiseq><gui>Menu główne</gui><gui>Odrzuć zmiany</gui></guiseq> trwale "
+"odrzuci wszystkie zmiany wprowadzone w pliku od ostatniego zapisu."
 
 #. (itstool) path: p/link
 #: C/legal.xml:4
