--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+# Text Editor 44.0
+
+ • Improve spellcheck word boundaries
+ • Various build system improvements
+ • Translation updates
+
 # Text Editor 44.rc
 
  • Style fixes for open popover
