Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -910,7 +910,7 @@ msgstr "O_bre"
 
 #: src/editor-window.ui:84
 msgid "Recently Used Documents (Ctrl+K)"
-msgstr "Obre el document recent (Ctrl+K)"
+msgstr "Obre documents recents (Ctrl+K)"
 
 #: src/editor-window.ui:96
 msgid "New Tab (Ctrl+T)"
@@ -1121,7 +1121,7 @@ msgstr "Document nou"
 #: src/help-overlay.ui:91
 msgctxt "shortcut window"
 msgid "Browse to open document"
-msgstr "Navega per a obrir el document"
+msgstr "Navega per a obrir un document"
 
 #: src/help-overlay.ui:97
 msgctxt "shortcut window"
