--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 # Text Editor 45.alpha
 
+ • Remove keyboard shortcuts from tooltips
+ • Fix initial focus of language selection dialog
+ • Allow setting "Plain Text" in language selection dialog
+
+# Text Editor 45.alpha
+
  • Styling improvements to match recent libadwaita changes
  • Fixes for various settings in per-tab overrides
  • Various Windows build system improvements
