--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+# Text Editor 45.0
+
+ • Fix tab closing while documents are loading
+ • Shortcuts are removed from tooltips to match GNOME behavior. They continue
+   to be available in the shortcuts window.
+ • Focus fixes for the language selection dialog making keyboard use more
+   accessible.
+ • You can now set defaults for "Plain Text" in the language dialog.
+ • Improved search filtering in the Open popover.
+
 # Text Editor 45.alpha
 
  • Remove keyboard shortcuts from tooltips
