Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: gnome-text-editor master\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gnome-text-editor/"
 "issues\n"
-"POT-Creation-Date: 2023-08-04 17:20+0000\n"
+"POT-Creation-Date: 2023-08-17 16:29+0000\n"
 "PO-Revision-Date: 2023-08-08 08:23+0200\n"
 "Last-Translator: Daniel Mustieles García <daniel.mustieles@gmail.com>\n"
 "Language-Team: Spanish - Spain <gnome-es-list@gnome.org>\n"
@@ -1215,7 +1215,7 @@ msgstr "Edición"
 #: src/help-overlay.ui:185
 msgctxt "shortcut window"
 msgid "Insert emoji into document"
-msgstr "Insertar emoticono en el documento"
+msgstr "Insertar emoji en el documento"
 
 #: src/help-overlay.ui:191
 msgctxt "shortcut window"
