--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+# Text Editor 45.1
+
+ • Use proper etag when comparing document for changes after a Save As
+   operation occurs.
+ • Fix row styling in preferences.
+ • Fix memory leak of GtkNativeDialog.
+ • Translation updates.
+
 # Text Editor 45.0
 
  • Fix tab closing while documents are loading
