--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 45.2
+
+ • Fix keyboard focus in light/dark/follow-system theme selector
+ • Fix window/tab closing while document is still loading
+ • Work around broken user XDG configuration for documents
+ • Translation updates
+
 # Text Editor 45.1
 
  • Use proper etag when comparing document for changes after a Save As
