--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# Text Editor 45.3
+
+ • Fix "Move to New Window" action. This regressed from work to fix
+   potential high CPU usage in 45.2.
+
 # Text Editor 45.2
 
  • Fix keyboard focus in light/dark/follow-system theme selector
