--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+# Text Editor 46.rc
+
+Changes since 46.beta
+
+ • Disable editing while document is loading
+ • Discard still-loading documents when saving session
+ • Fix some tab integration issues with libadwaita
+
 # Text Editor 46.beta
 
 Changes since 46.alpha
