--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 46.0
+
+ • Various performance workarounds have been added to the overview
+   map to improve rendering performance and quality with fractional
+   scaling.
+ • Translation updates
+
 # Text Editor 46.rc
 
 Changes since 46.beta
