--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+# Text Editor 46.1
+
+ • Remove DBusActicatable=true from the .desktop file to fix an issue
+   where you could spawn Text Editor via D-Bus and not have the session
+   restored at startup.
+ • AppData fixes
+ • Translation updates
+
 # Text Editor 46.0
 
  • Various performance workarounds have been added to the overview
