--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+# Text Editor 46.2
+
+ • Fix an issue with cancellation of closing a page
+ • Try harder to ensure a buffer disposes associated resources when
+   the page is closed.
+ • Translation updates
+
+It is recommended that distributions update to this release.
+
 # Text Editor 46.1
 
  • Remove DBusActicatable=true from the .desktop file to fix an issue
