--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# Text Editor 46.3
+
+ • Fix a trivial build error when -Werror=implicit-function-declaration is
+   specified.
+
 # Text Editor 46.2
 
  • Fix an issue with cancellation of closing a page
