--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+# Text Editor 47.beta
+
+ * Various recoloring tweaks to better match platform styling.
+ * Improvements to use of AdwDialog.
+ * Print operations improvements.
+ * Spellcheck improvements including support for use with F10/Menu.
+ * Prefer wide layout for save-changes-dialog.
+
 # Text Editor 47.alpha
 
  * Various UI elements have been ported to new libadwaita features so
