--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+# Text Editor 47.rc
+
+ * Text Editor now uses libspelling for spellchecking
+ * Various CSS fixes for transitioning to AdwDialog
+ * implicit-trailing-newline is now turned on by default
+
 # Text Editor 47.beta
 
  * Various recoloring tweaks to better match platform styling.
