--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# Text Editor 47.0
+
+ * Fix focus ring around checkmark in save-changes dialog
+ * Translation updates
+
 # Text Editor 47.rc
 
  * Text Editor now uses libspelling for spellchecking
