--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# Text Editor 47.1
+
+ * Fix document to default to implicit trailing newlines
+ * Improve text wrapping for banners on small form factors
+
 # Text Editor 47.0
 
  * Fix focus ring around checkmark in save-changes dialog
