--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+# Text Editor 47.2
+
+ * Unescaping URIs for tooltips to improve legibility
+ * Fix initial-trailing-newline when settings auto-discovery is disabled
+ * Fix save-as when using admin:// URIs
+ * Pin document encoding when loading a file
+ * Override extend_selection for multi-mouse-press to avoid some slow
+   corner cases in minified JSON files
+ * Markup fixes in properties dialog
+ * Updated translations
+
 # Text Editor 47.1
 
  * Fix document to default to implicit trailing newlines
