--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 48.beta
+
+ * More refinement on design updates
+ * Search bar moved to bottom of text area
+ * Track changes in xdg-portal
+ * Translation updates
+
 # Text Editor 48.alpha
 
  * The view menu has been removed in favor of a new properties panel
