--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+# Text Editor 48.rc
+
+ * Slight UI tweaks to the open button to allow for better shrinking
+   of the window to narrow sizes
+ * Search bar cancellation bug fixes
+ * Fix right-margin-position in preferences not working on some
+   distributions
+ * Translation updates
+
 # Text Editor 48.beta
 
  * More refinement on design updates
