po: enable disabled translations of "Indentation"
We are using this in the preferences so we need to ensure it is available
even though it was removed previously.

--- a/po/be.po
+++ b/po/be.po
@@ -1314,8 +1314,8 @@ msgstr "Уключыць або выключыць перанос радкоў"
 #~ msgid "Cancel"
 #~ msgstr "Адмена"
 
-#~ msgid "Indentation"
-#~ msgstr "Водступы"
+msgid "Indentation"
+msgstr "Водступы"
 
 #~ msgid "2"
 #~ msgstr "2"
