--- a/po/ca.po
+++ b/po/ca.po
@@ -1335,8 +1335,8 @@ msgstr "Commuta l'ajustament del text"
 #~ msgid "Cancel"
 #~ msgstr "Cancel·la"
 
-#~ msgid "Indentation"
-#~ msgstr "Sagnat"
+msgid "Indentation"
+msgstr "Sagnat"
 
 #~ msgid "Use Tab Size"
 #~ msgstr "Utilitza la mida del tabulador"
