--- a/po/cs.po
+++ b/po/cs.po
@@ -1308,8 +1308,8 @@ msgstr "Přepnout zalamování textu"
 #~ msgid "Cancel"
 #~ msgstr "Zrušit"
 
-#~ msgid "Indentation"
-#~ msgstr "Odsazení"
+msgid "Indentation"
+msgstr "Odsazení"
 
 #~ msgid "2"
 #~ msgstr "2"
