--- a/po/da.po
+++ b/po/da.po
@@ -1311,8 +1311,8 @@ msgstr "Slå tekstombrydning til/fra"
 #~ msgid "Cancel"
 #~ msgstr "Annullér"
 
-#~ msgid "Indentation"
-#~ msgstr "Indrykning"
+msgid "Indentation"
+msgstr "Indrykning"
 
 #~ msgid "2"
 #~ msgstr "2"
