--- a/po/es.po
+++ b/po/es.po
@@ -1322,8 +1322,8 @@ msgstr "Cambiar el ajuste de texto"
 #~ msgid "Cancel"
 #~ msgstr "Cancelar"
 
-#~ msgid "Indentation"
-#~ msgstr "Sangrado"
+msgid "Indentation"
+msgstr "Sangrado"
 
 #~ msgid "2"
 #~ msgstr "2"
