--- a/po/eu.po
+++ b/po/eu.po
@@ -1281,8 +1281,8 @@ msgstr "Txandakatu testu-egokitzea"
 #~ msgid "Cancel"
 #~ msgstr "Utzi"
 
-#~ msgid "Indentation"
-#~ msgstr "Koskak"
+msgid "Indentation"
+msgstr "Koskak"
 
 #~ msgid "2"
 #~ msgstr "2"
