--- a/po/fa.po
+++ b/po/fa.po
@@ -1295,8 +1295,8 @@ msgstr "تغییر وضعیت شکاندن متن"
 #~ msgid "Cancel"
 #~ msgstr "لغو"
 
-#~ msgid "Indentation"
-#~ msgstr "تورفتگی"
+msgid "Indentation"
+msgstr "تورفتگی"
 
 #~ msgid "2"
 #~ msgstr "۲"
