--- a/po/fi.po
+++ b/po/fi.po
@@ -1296,8 +1296,8 @@ msgstr "Tekstin rivitys päällä/pois"
 #~ msgid "Cancel"
 #~ msgstr "Peru"
 
-#~ msgid "Indentation"
-#~ msgstr "Sisennys"
+msgid "Indentation"
+msgstr "Sisennys"
 
 #~ msgid "2"
 #~ msgstr "2"
