--- a/po/gl.po
+++ b/po/gl.po
@@ -1328,8 +1328,8 @@ msgstr "Trocar envoltura do texto"
 #~ msgid "Cancel"
 #~ msgstr "Cancelar"
 
-#~ msgid "Indentation"
-#~ msgstr "Sangrado"
+msgid "Indentation"
+msgstr "Sangrado"
 
 #~ msgid "2"
 #~ msgstr "2"
