--- a/po/he.po
+++ b/po/he.po
@@ -1306,8 +1306,8 @@ msgstr "שינוי מצב גלישת טקסט"
 #~ msgid "Cancel"
 #~ msgstr "ביטול"
 
-#~ msgid "Indentation"
-#~ msgstr "הזחה"
+msgid "Indentation"
+msgstr "הזחה"
 
 #~ msgid "2"
 #~ msgstr "2"
