--- a/po/ko.po
+++ b/po/ko.po
@@ -1296,8 +1296,8 @@ msgstr "텍스트 줄 바꿈 전환"
 #~ msgid "Cancel"
 #~ msgstr "취소"
 
-#~ msgid "Indentation"
-#~ msgstr "들여쓰기"
+msgid "Indentation"
+msgstr "들여쓰기"
 
 #~ msgid "2"
 #~ msgstr "2"
