--- a/po/lt.po
+++ b/po/lt.po
@@ -1304,8 +1304,8 @@ msgstr "Perjungti teksto laužymą"
 #~ msgid "Cancel"
 #~ msgstr "Atsisakyti"
 
-#~ msgid "Indentation"
-#~ msgstr "Įtrauka"
+msgid "Indentation"
+msgstr "Įtrauka"
 
 #~ msgid "2"
 #~ msgstr "2"
