--- a/po/nb.po
+++ b/po/nb.po
@@ -1308,8 +1308,8 @@ msgstr "Tekstbryting"
 #~ msgid "Cancel"
 #~ msgstr "Avbryt"
 
-#~ msgid "Indentation"
-#~ msgstr "Innrykk"
+msgid "Indentation"
+msgstr "Innrykk"
 
 #~ msgid "2"
 #~ msgstr "2"
