--- a/po/pt.po
+++ b/po/pt.po
@@ -1317,8 +1317,8 @@ msgstr "Ajuste à largura"
 #~ msgid "Cancel"
 #~ msgstr "Cancelar"
 
-#~ msgid "Indentation"
-#~ msgstr "Indentação"
+msgid "Indentation"
+msgstr "Indentação"
 
 #~ msgid "2"
 #~ msgstr "2"
