--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1323,8 +1323,8 @@ msgstr "Alterna a quebra de texto"
 #~ msgid "Cancel"
 #~ msgstr "Cancelar"
 
-#~ msgid "Indentation"
-#~ msgstr "Recuo"
+msgid "Indentation"
+msgstr "Recuo"
 
 #~ msgid "2"
 #~ msgstr "2"
