--- a/po/ru.po
+++ b/po/ru.po
@@ -1330,8 +1330,8 @@ msgstr "Переключить перенос текста"
 #~ msgid "Main menu"
 #~ msgstr "Главное меню"
 
-#~ msgid "Indentation"
-#~ msgstr "Отступ"
+msgid "Indentation"
+msgstr "Отступ"
 
 #~ msgid "2"
 #~ msgstr "2"
