--- a/po/sv.po
+++ b/po/sv.po
@@ -1327,8 +1327,8 @@ msgstr "Växla radbrytning av text"
 #~ msgid "Search document types"
 #~ msgstr "Sök dokumenttyper"
 
-#~ msgid "Indentation"
-#~ msgstr "Indrag"
+msgid "Indentation"
+msgstr "Indrag"
 
 #~ msgid "2"
 #~ msgstr "2"
