--- a/po/uk.po
+++ b/po/uk.po
@@ -1353,8 +1353,8 @@ msgstr "Увімкнути або вимкнути перенесення ряд
 #~ msgid "Cancel"
 #~ msgstr "Скасувати"
 
-#~ msgid "Indentation"
-#~ msgstr "Відступ"
+msgid "Indentation"
+msgstr "Відступ"
 
 #~ msgid "2"
 #~ msgstr "2"
