--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1288,8 +1288,8 @@ msgstr "开关文本折行"
 #~ msgid "Cancel"
 #~ msgstr "取消"
 
-#~ msgid "Indentation"
-#~ msgstr "缩进"
+msgid "Indentation"
+msgstr "缩进"
 
 #~ msgid "2"
 #~ msgstr "2"
