--- a/po/it.po
+++ b/po/it.po
@@ -1311,8 +1311,8 @@ msgstr "Attiva/disattiva il ritorno a capo automatico"
 #~ msgid "Cancel"
 #~ msgstr "Annulla"
 
-#~ msgid "Indentation"
-#~ msgstr "Indentazione"
+msgid "Indentation"
+msgstr "Indentazione"
 
 #~ msgid "2"
 #~ msgstr "2"
