po: add back missing "Indentation" translation
These were previously removed from translations when the menu was removed
from editor-page.ui. However, we need the translation in the same context
again so this adds it back allowing it to be used in Preferences.

--- a/po/bg.po
+++ b/po/bg.po
@@ -1306,3 +1306,6 @@ msgstr "Показване на помощта"
 msgctxt "shortcut window"
 msgid "Toggle text wrapping"
 msgstr "Превключване на режима с пренасяне"
+
+msgid "Indentation"
+msgstr "Отстъп"
