--- a/po/fr.po
+++ b/po/fr.po
@@ -1322,3 +1322,6 @@ msgstr "Afficher l’aide"
 msgctxt "shortcut window"
 msgid "Toggle text wrapping"
 msgstr "Basculer le retour à la ligne"
+
+msgid "Indentation"
+msgstr "Indentation"
