--- a/po/hu.po
+++ b/po/hu.po
@@ -1337,3 +1337,6 @@ msgstr "Súgó megjelenítése"
 msgctxt "shortcut window"
 msgid "Toggle text wrapping"
 msgstr "Szöveg tördelésének ki- és bekapcsolása"
+
+msgid "Indentation"
+msgstr "Behúzás"
