--- a/po/id.po
+++ b/po/id.po
@@ -1301,3 +1301,6 @@ msgstr "Tampilkan bantuan"
 msgctxt "shortcut window"
 msgid "Toggle text wrapping"
 msgstr "Jungkitkan pelipatan teks"
+
+msgid "Indentation"
+msgstr "Indentasi"
