--- a/po/pl.po
+++ b/po/pl.po
@@ -1291,3 +1291,6 @@ msgstr "Wyświetlenie pomocy"
 msgctxt "shortcut window"
 msgid "Toggle text wrapping"
 msgstr "Przełączenie zawijania tekstu"
+
+msgid "Indentation"
+msgstr "Wcięcia"
