--- a/po/sl.po
+++ b/po/sl.po
@@ -1297,3 +1297,6 @@ msgstr "Pokaže pomoč"
 msgctxt "shortcut window"
 msgid "Toggle text wrapping"
 msgstr "Preklopi ovijanje/prelom besedila"
+
+msgid "Indentation"
+msgstr "Zamikanje"
