--- a/po/tr.po
+++ b/po/tr.po
@@ -1302,3 +1302,6 @@ msgstr "Yardımı göster"
 msgctxt "shortcut window"
 msgid "Toggle text wrapping"
 msgstr "Metin kaydırmayı aç/kapat"
+
+msgid "Indentation"
+msgstr "Girintile"
