--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 48.0
+
+ * Defaults for markdown no longer imply 80 char right margin and
+   it is instead inherted from gsetting defaults.
+ * Fallback indentation selection is in preferences now.
+ * Translation updates
+
 # Text Editor 48.rc
 
  * Slight UI tweaks to the open button to allow for better shrinking
