--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# Text Editor 48.1
+
+ * Fix accessibility properties on search entry
+ * Translation updates
+
 # Text Editor 48.0
 
  * Defaults for markdown no longer imply 80 char right margin and
