--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 48.2
+
+ * Break out of recursive Policy-Kit authorization requests from
+   user-cancellation.
+ * Do not re-display position label as side-effect of auto-save
+ * Translation updates
+
 # Text Editor 48.1
 
  * Fix accessibility properties on search entry
