--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+# Text Editor 47.4
+
+ * Break out of recursive Policy-Kit checks upon user-cancellation
+ * Fix search-bar search cancellation
+ * Translation updates
+
 # Text Editor 47.3
 
  * Ensure search context is disposed to help avoid background work
