--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+# Text Editor 49.alpha
+
+ * Improve document filtering for search
+ * Improve session save
+ * Activate application if no window is present
+ * Fix auto-save combined with session-restore behavior
+ * Handle gtk-decoration-layout for tab closing
+ * Fix label updates in properties when Save As is used
+ * Reload document when encoding dialog is used
+ * Fix a potential leak of pages
+
 # Text Editor 48.2
 
  * Break out of recursive Policy-Kit authorization requests from
